# lifesource-deal-intelligence

./: .env.example  .gitignore  README.md  pyproject.toml
launchd/: com.lifesource.daily.plist  com.lifesource.hmart-weekly-digest.plist  com.lifesource.hmart-weekly-monitor.plist  com.lifesource.server.plist
lifesource/: __main__.py  config.py  db.py  matching.py  models.py  server.py
lifesource/api/: analytics.py  deals.py  gas.py  job.py  plan.py  purchases.py  receipts.py  settings.py  shopping_list.py  sources.py  watchlist.py
lifesource/daily/: __main__.py  backup.py  hmart_weekly.py  job.py
lifesource/dashboard/: routes.py
lifesource/notifications/: digest.py  hmart_weekly.py  telegram.py
lifesource/scoring/: engine.py  planner.py
lifesource/scrapers/: base.py  costco.py  gasbuddy.py  heb.py  hmart.py  ranch99.py  traderjoes.py  vision.py
lifesource/sources/: __init__.py  hmart_items.py  hmart_weekly.py  snapshots.py  status.py  weekly_items.py
lifesource/static/: style.css  (+1 more)
scripts/: install-launchd.sh
tests/: conftest.py  test_api_deals.py  test_api_purchases.py  test_backup.py  test_config.py  test_daily_job.py  test_db.py  test_digest.py  test_heb_scraper.py  test_hmart_item_extraction.py  test_hmart_scraper.py  test_hmart_weekly_cli.py  test_hmart_weekly_jobs.py  test_hmart_weekly_notifications.py  test_hmart_weekly_source.py  test_matching.py  test_mobile_pwa.py  test_models.py  test_public_readiness.py  test_scoring.py  test_source_snapshots.py  test_source_status_api.py  test_sources_dashboard.py  test_telegram.py  test_weekly_ad_items.py
(+19 files in other folders)
